// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntryFiles should get entry module: (Output File Strategy "members") (Option Group "1") 1`] = `
"**typedoc-stubs** • [Readme](readme_.mdx) \\| API

***

# entry-module

## Index

### Classes

- [ModuleClass](entry-module/classes/ModuleClass.mdx)
"
`;

exports[`EntryFiles should get entry module: (Output File Strategy "members") (Option Group "2") 1`] = `
"**typedoc-stubs** • API

***

# entry-module

## Index

### Classes

- [ModuleClass](entry-module/classes/ModuleClass.mdx)
"
`;

exports[`EntryFiles should get module member for members: (Output File Strategy "members") (Option Group "1") 1`] = `
"**typedoc-stubs** • [Readme](../../readme_.mdx) \\| [API](../../README.mdx)

***

[typedoc-stubs](../../README.mdx) / ModuleClass

# Class: ModuleClass

## Constructors

### new ModuleClass()

> **new ModuleClass**(): [\`ModuleClass\`](ModuleClass.mdx)

#### Returns

[\`ModuleClass\`](ModuleClass.mdx)
"
`;

exports[`EntryFiles should get module member for members: (Output File Strategy "members") (Option Group "2") 1`] = `
"**typedoc-stubs** • API

***

[typedoc-stubs](../../index.mdx) / ModuleClass

# Class: ModuleClass

## Constructors

### new ModuleClass()

> **new ModuleClass**(): [\`ModuleClass\`](ModuleClass.mdx)

#### Returns

[\`ModuleClass\`](ModuleClass.mdx)
"
`;

exports[`EntryFiles should get readme file: (Output File Strategy "members") (Option Group "1") 1`] = `
"**typedoc-stubs** • Readme \\| [API](README.mdx)

***

[typedoc-stubs](README.mdx) / typedoc-stubs

# MY README

> Some block quote

Some text.

## Readme heading

Some text.
"
`;
